--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -1,18 +1,23 @@
 <ng-template #modal let-c="close" let-d="dismiss">
+  <!-- Header -->
   <div class="modal-header text-center">
     <h4 class="modal-title">Modal</h4>
   </div>
-
+  <!-- /Header -->
   <div class="modal-body">
+    <!-- Form -->
     <ng-container *ngTemplateOutlet="form"></ng-container>
+    <!-- /Form -->
+    <!-- Alert -->
+    <ng-container *ngTemplateOutlet="alert"></ng-container>
+    <!-- /Alert -->
   </div>
-
-  <ng-container *ngTemplateOutlet="alert"></ng-container>
-
+  <!-- Footer -->
   <div class="modal-footer d-flex justify-content-between">
     <button type="button" class="btn btn-outline-secondary" (click)="close()">取消</button>
-    <button type="submit" class="btn btn-outline-dark" (click)="submit()" [disabled]="!this.fbGroup.valid">確定</button>
+    <button type="submit" class="btn btn-outline-dark" (click)="submit()" [disabled]="!fbGroup.valid">確定</button>
   </div>
+  <!-- /Footer -->
 </ng-template>
 
 <ng-template #alert>
