--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -33,14 +33,14 @@
   <form [formGroup]="fbGroup" (ngSubmit)="onSubmit()" #form="ngForm">
     <!-- Name -->
     <div class="form-group row">
-      <label for="e_Name" class="col-sm-2 col-form-label"
+      <label for="e_Name" class="col-3 col-form-label"
         *ngIf="!errorValidators['e_Name'].length; else e_Name">姓名</label>
 
       <ng-template #e_Name>
-        <label for="name" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_Name'] }}</label>
+        <label for="name" class="col-3 col-form-label text-danger">{{ errorValidators['e_Name'] }}</label>
       </ng-template>
 
-      <div class="col-sm-10">
+      <div class="col">
         <input type="text" id="e_Name" class="form-control" formControlName="e_Name" placeholder="姓名"
           (blur)="inputValidators(fbGroup, 'e_Name')">
       </div>
@@ -48,15 +48,15 @@
 
     <!-- Job Number -->
     <div class="form-group row">
-      <label for="e_JobNumber" class="col-sm-2 col-form-label"
+      <label for="e_JobNumber" class="col-3 col-form-label"
         *ngIf="!errorValidators['e_JobNumber'].length; else e_JobNumber">工號</label>
 
       <ng-template #e_JobNumber>
-        <label for="e_JobNumber" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_JobNumber']
+        <label for="e_JobNumber" class="col-3 col-form-label text-danger">{{ errorValidators['e_JobNumber']
           }}</label>
       </ng-template>
 
-      <div class="col-sm-10">
+      <div class="col">
         <input type="text" id="e_JobNumber" class="form-control" formControlName="e_JobNumber" placeholder="工號"
           (blur)="inputValidators(fbGroup, 'e_JobNumber')">
       </div>
@@ -64,34 +64,45 @@
 
     <!-- Password -->
     <div class="form-group row">
-      <label for="e_PassWord" class="col-sm-2 col-form-label"
+      <label for="e_PassWord" class="col-3 col-form-label"
         *ngIf="!errorValidators['e_PassWord'].length; else e_PassWord">密碼</label>
 
       <ng-template #e_PassWord>
-        <label for="e_PassWord" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_PassWord']
+        <label for="e_PassWord" class="col-3 col-form-label text-danger">{{ errorValidators['e_PassWord']
           }}</label>
       </ng-template>
 
-      <div class="col-sm-10">
-        <input type="password" id="passWord" class="form-control" formControlName="e_PassWord" placeholder="密碼"
-          (blur)="inputValidators(fbGroup, 'e_PassWord')" autocomplete="false">
+      <div class="col">
+        <div class="input-group input-group-md">
+          <input [type]="'password'" id="passWord" class="form-control" formControlName="e_PassWord" placeholder="密碼"
+            (blur)="inputValidators(fbGroup, 'e_PassWord')" autocomplete="false" #passWord_Type>
+
+          <div class="input-group-prepend">
+            <span class="input-group-text"
+              (click)="passWord_Type.type == 'text' ? passWord_Type.type = 'password': passWord_Type.type = 'text'">
+              <i [ngClass]="passWord_Type.type == 'password' ? 'bi bi-eye-slash-fill' : 'bi bi-eye-fill'"></i>
+            </span>
+          </div>
+        </div>
       </div>
     </div>
 
     <!-- ConfirmPassword -->
     <div class="form-group row">
-      <label for="e_ConfirmPassword" class="col-sm-2 col-form-label"
-        *ngIf="!errorValidators['e_ConfirmPassword'].length && !fbGroup.hasError('passwordMatch'); else e_PassWord">密碼</label>
+
+      <!-- <ng-template *ngIf="!errorValidators['e_ConfirmPassword'].length" [ngIfElse]="loading">
+      </ng-template> -->
+
+      <label for="e_ConfirmPassword" class="col-3 col-form-label"
+        *ngIf="!errorValidators['e_ConfirmPassword'].length && !fbGroup.hasError('passWordMatch'); else e_ConfirmPassword">確認密碼</label>
 
       <ng-template #e_ConfirmPassword>
-        <label for="e_ConfirmPassword" class="col-sm-2 col-form-label text-danger">
-          {{ errorValidators['e_ConfirmPassword'] }}
-          <span class="text-danger h6"
-            *ngIf="fb_Value['e_ConfirmPassword'].dirty && fbGroup.hasError('passwordMatch')">錯誤</span>
+        <label for="e_ConfirmPassword" class="col-3 col-form-label text-danger">
+          <span class="text-danger h6">{{ errorValidators['e_ConfirmPassword'] || '錯誤' }}</span>
         </label>
       </ng-template>
 
-      <div class="col-sm-10">
+      <div class="col">
         <input type="password" id="e_ConfirmPassword" class="form-control" formControlName="e_ConfirmPassword"
           placeholder="確認密碼" (blur)="inputValidators(fbGroup, 'e_ConfirmPassword')" autocomplete="false">
       </div>
@@ -99,15 +110,15 @@
 
     <!-- Email -->
     <div class="form-group row">
-      <label for="e_Email" class="col-sm-2 col-form-label"
+      <label for="e_Email" class="col-3 col-form-label"
         *ngIf="!errorValidators['e_Email'].length; else e_Email">信箱</label>
 
       <ng-template #e_Email>
-        <label for="e_Email" class="col-sm-2 col-form-label text-danger">{{ errorValidators['e_Email']
+        <label for="e_Email" class="col-3 col-form-label text-danger">{{ errorValidators['e_Email']
           }}</label>
       </ng-template>
 
-      <div class="col-sm-10">
+      <div class="col">
         <input type="email" id="e_Email" class="form-control" formControlName="e_Email" placeholder="信箱"
           (blur)="inputValidators(fbGroup, 'e_Email')">
       </div>
@@ -115,9 +126,9 @@
 
     <!-- Level -->
     <div class="form-group row">
-      <label for="e_Lv" class="col-sm-2 col-form-label">權限</label>
+      <label for="e_Lv" class="col-3 col-form-label">權限</label>
 
-      <div class="col-sm-10">
+      <div class="col">
         <select id="e_Lv" class="form-control text-center" formControlName="e_Lv">
           <option value="1">普通</option>
           <option value="2">中級</option>
