--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -18,6 +18,10 @@ a
   cursor: pointer;
 }
 
+.input-group-prepend span {
+  cursor: pointer;
+}
+
 .feather {
   width: 16px;
   height: 16px;
@@ -136,3 +140,20 @@ a
   0%   {transform: scale(0.5)}
   100% {transform: scale(1)}
 }
+
+
+/* Main form-group label Bg */
+.modal-body .form-group label
+{
+  text-align: center;
+  letter-spacing: 4px;
+  background-color: rgba($color: #cccccc, $alpha: .2);
+}
+
+.modal-body .form-group label::after
+{
+  content: ":";
+  float: right;
+  font-weight: bold;
+}
+
