--- a/client/src/app/components/content-header/content-header.component.html
+++ b/client/src/app/components/content-header/content-header.component.html
@@ -1,35 +1,38 @@
 <div class="container-md mt-2 mb-2">
   <div class="row justify-content-md-center">
-    <!-- Search -->
+    <!-- Search Btn -->
     <div class="col-md-7 col-sm-8">
       <div class="input-group input-group-sm mb-3">
         <div class="input-group-prepend">
           <button type="button" class="btn btn-outline-secondary btn-sm" (click)="refresh()"
             [disabled]="!search_Input.value.length">刷新</button>
         </div>
-          <input type="text" class="form-control" maxlength="20" ngModel #search_Input>
+        <input type="text" class="form-control" maxlength="20" ngModel #search_Input>
         <div class="input-group-append">
           <button type="button" class="btn btn-secondary btn-sm" (click)="search()"
             [disabled]="!search_Input.value.length">搜尋</button>
         </div>
       </div>
     </div>
-    <!-- /Search -->
-    <!-- Crud -->
+    <!-- /Search Btn -->
+    <!-- Crud Btns -->
     <div class="col-md-5 col-sm-12 d-flex justify-content-between">
       <div class="col text-center">
         <ng-container *ngIf="user.lv > 1">
-          <button type="button" class="btn btn-outline-info btn-sm" (click)="open()">新增</button>
+          <button type="button" class="btn btn-outline-info btn-sm" (click)="toggle('show','insert')">新增</button>
         </ng-container>
       </div>
-      <div class="col text-center">        
-        <button type="button" class="btn btn-outline-warning btn-sm" (click)="update()"
-          [disabled]="user.lv < 2 || false">更新</button>
-      </div>
-      <div class="col text-center">
-        <button type="button" class="btn btn-outline-danger btn-sm" (click)="delete()">刪除</button>
-      </div>
+      <ng-container *ngIf="fb_Value_Index[0]">
+        <div class="col text-center">
+          <button type="button" class="btn btn-outline-warning btn-sm" (click)="toggle('show','update')"
+            [disabled]="user.lv < 2 || false">更新</button>
+        </div>
+        <div class="col text-center">
+          <button type="button" class="btn btn-outline-danger btn-sm" (click)="delete()"
+            [disabled]="user.lv < 2 || false">刪除</button>
+        </div>
+      </ng-container>
     </div>
-    <!-- /Crud -->
+    <!-- /Crud Btns -->
   </div>
 </div>
