--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -1,25 +1,64 @@
-<ng-template #modal let-c="close" let-d="dismiss">
+<!-- Modal Form -->
+<ng-template #modalForm let-modal>
   <!-- Header -->
-  <div class="modal-header text-center">
-    <h4 class="modal-title">Modal</h4>
+  <div class="modal-header">
+    <h4 class="modal-title">
+      <!-- Alert -->
+      <ng-container *ngTemplateOutlet="alert"></ng-container>
+      <!-- /Alert -->
+    </h4>
   </div>
   <!-- /Header -->
   <div class="modal-body">
     <!-- Form -->
     <ng-container *ngTemplateOutlet="form"></ng-container>
     <!-- /Form -->
+  </div>
+  <!-- Footer -->
+  <div class="modal-footer d-flex justify-content-between">
+    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('Cross click')">取消</button>
+    <button type="submit" class="btn btn-outline-dark" (click)="submit()" [disabled]="!fbGroup.valid">確定</button>
+  </div>
+  <!-- /Footer -->
+</ng-template>
+<!-- /Modal Form -->
+
+<!-- Modal SM -->
+<ng-template #modalSM let-modal>
+  <!-- Header -->
+  <div class="modal-header">
+    <h4 class="modal-title">
+      <!-- Alert -->
+      <ng-container *ngTemplateOutlet="alert"></ng-container>
+      <!-- /Alert -->
+    </h4>
+  </div>
+  <!-- /Header -->
+  <div class="modal-body">
+    <p class="text-danger text-center font-weight-bold font-italic">
+      <u>
+        是否刪除以下資料?
+      </u>
+    </p>
+    <p class="text-truncate text-center h4">
+      <strong>{{fb_Value_Index[1]}}</strong>
+      {{fb_Value_Index[2]}}
+    </p>
     <!-- Alert -->
     <ng-container *ngTemplateOutlet="alert"></ng-container>
     <!-- /Alert -->
   </div>
   <!-- Footer -->
   <div class="modal-footer d-flex justify-content-between">
-    <button type="button" class="btn btn-outline-secondary" (click)="close()">取消</button>
-    <button type="submit" class="btn btn-outline-dark" (click)="submit()" [disabled]="!fbGroup.valid">確定</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('Cross click')">取消</button>
+    <button type="submit" class="btn btn-outline-danger" (click)="delete()" [disabled]="!fb_Value_Index[0]">確定</button>
   </div>
   <!-- /Footer -->
 </ng-template>
+<!-- /Modal SM -->
 
+<!-- Alert -->
 <ng-template #alert>
   <div appAlerts></div>
 </ng-template>
+<!-- /Alert -->
