--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -15,8 +15,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let item of result_Async$ | async; index as i" [ngClass]="{'text-light bg-dark': item?.e_Id == fb_Value['e_Id'].value}" (click)="choose(item)">
-    <!-- <tr *ngFor="let item of result_List; index as i"> -->
+    <!-- <tr *ngFor="let item of result_Async$ | async; index as i" [ngClass]="{'text-light bg-dark': item?.e_Id == fb_Value['e_Id'].value}" (click)="choose(item)"> -->
+    <tr *ngFor="let item of result_List; index as i" [ngClass]="{'text-light bg-dark': item?.e_Id == fb_Value['e_Id'].value}" (click)="choose(item)">
       <td>{{ item.e_Name }}</td>
       <td>{{ item.e_Email }}</td>
       <td>{{ item.e_JobNumber }}</td>
