--- a/client/src/app/components/content-header/content-header.component.html
+++ b/client/src/app/components/content-header/content-header.component.html
@@ -5,7 +5,7 @@
       <div class="input-group input-group-sm mb-3">
         <div class="input-group-prepend">
           <button type="button" class="btn btn-outline-secondary btn-sm" (click)="read()"
-            [disabled]="!searchText.length">刷新</button>
+            [disabled]="!searchText.length && !delayTime">刷新</button>
         </div>
         <input type="text" class="form-control" maxlength="20" [(ngModel)]="searchText">
         <div class="input-group-append">
