--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap shadow p-0">
-  <strong class="col-md-2 col-lg-2 mr-0 px-3 bg-dark text-danger">Tailyn</strong>
+  <strong class="col-md-2 col-lg-2 mr-0 px-3 text-danger">Tailyn</strong>
   <app-sidebar></app-sidebar>
 </nav>
