--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -17,7 +17,7 @@
   </div>
   <!-- Footer -->
   <div class="modal-footer d-flex justify-content-between">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('Cross click')">取消</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="close()">取消</button>
     <button type="button" class="btn btn-outline-dark" (click)="save()"
       [disabled]="!fbGroup.valid && !fb_Value_Index[0]">確定</button>
   </div>
@@ -43,14 +43,15 @@
         是否刪除以下資料?
       </u>
     </p>
-    <p class="text-truncate text-center h4">
+    <p class="text-truncate text-center h4 text-dark">
       <strong>{{fb_Value_Index[1]}}</strong>
       {{fb_Value_Index[2]}}
     </p>
   </div>
   <!-- Footer -->
   <div class="modal-footer d-flex justify-content-between">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('Cross click')">取消</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="close()">取消</button>
+    <!-- <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('Cross click')">取消</button> -->
     <button type="submit" class="btn btn-outline-danger" (click)="delete()" [disabled]="!fb_Value_Index[0]">確定</button>
   </div>
   <!-- /Footer -->
