--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,6 +2,11 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 @import "~bootstrap/scss/bootstrap";
 
+:root
+{
+  --red-color: red;
+  --white-color: white;
+}
 *
 {
   margin: 0;
@@ -12,22 +17,14 @@
 body {
   // font-size: .875rem;
 }
-
-a
-{
-  cursor: pointer;
-}
-
 .input-group-prepend span {
   cursor: pointer;
 }
-
 .feather {
   width: 16px;
   height: 16px;
   vertical-align: text-bottom;
 }
-
 @media (max-width: 767.98px) {
   .sidebar {
     top: 5rem;
@@ -51,109 +48,50 @@ a
   }
 }
 
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
-}
-
-.sidebar .nav-link .feather {
-  margin-right: 4px;
-  color: #999;
-}
-
-.sidebar .nav-link.active {
-  color: #007bff;
-}
-
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
-  color: inherit;
-}
-
-.sidebar-heading {
-  font-size: .75rem;
-  text-transform: uppercase;
-}
-
 /*
 * Navbar
 */
-.navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: 1rem;
-  background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-}
+// .navbar-brand {
+//   padding-top: .75rem;
+//   padding-bottom: .75rem;
+//   font-size: 1rem;
+//   background-color: rgba(0, 0, 0, .25);
+//   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+// }
 
-.navbar .navbar-toggler {
-  top: .25rem;
-  right: 1rem;
-}
+// .navbar .navbar-toggler {
+//   top: .25rem;
+//   right: 1rem;
+// }
 
-.navbar .form-control {
-  padding: .75rem 1rem;
-  border-width: 0;
-  border-radius: 0;
-}
+// .navbar .form-control {
+//   padding: .75rem 1rem;
+//   border-width: 0;
+//   border-radius: 0;
+// }
 
-.form-control-dark {
-  color: #fff;
-  background-color: rgba(255, 255, 255, .1);
-  border-color: rgba(255, 255, 255, .1);
-}
+// .form-control-dark {
+//   color: #fff;
+//   background-color: rgba(255, 255, 255, .1);
+//   border-color: rgba(255, 255, 255, .1);
+// }
 
-.form-control-dark:focus {
-  border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
-}
+// .form-control-dark:focus {
+//   border-color: transparent;
+//   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+// }
 
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+// .bd-placeholder-img {
+//   font-size: 1.125rem;
+//   text-anchor: middle;
+//   -webkit-user-select: none;
+//   -moz-user-select: none;
+//   -ms-user-select: none;
+//   user-select: none;
+// }
 
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
-}
-
-/*  Modal Backdrop */
-.light-blue-backdrop
-{
-  background-color: rgba(0, 0, 0, 1)
-}
-
-.modal-holder
-{
-  animation-name: modal-effect;
-  animation-duration: 0.3s;
-}
-
-@keyframes modal-effect
-{
-  0%   {transform: scale(0.5)}
-  100% {transform: scale(1)}
-}
-
-
-/* Main form-group label Bg */
-.modal-body .form-group label
-{
-  text-align: center;
-  letter-spacing: 4px;
-  background-color: rgba($color: #cccccc, $alpha: .2);
-}
-
-.modal-body .form-group label::after
-{
-  content: ":";
-  float: right;
-  font-weight: bold;
-}
-
+// @media (min-width: 768px) {
+//   .bd-placeholder-img-lg {
+//     font-size: 3.5rem;
+//   }
+// }
