--- a/client/src/app/components/work/work.component.html
+++ b/client/src/app/components/work/work.component.html
@@ -33,8 +33,8 @@
             {{ item.w_JobNumber }}
           </span>
         </td>
-        <td>{{ item.w_BMinute }} 分</td>
-        <td>{{ item.w_OMinute }} 分</td>
+        <td>{{ item.bTotal }} 分</td>
+        <td>{{ item.oTotal }} 分</td>
         <td>
           <span class="w-75 text-truncate">
             {{ item.w_WorkOrder }}
@@ -52,7 +52,7 @@
         </td>
         <td>
           <span class="w-75 text-truncate">
-            {{ item.w_Time | date: 'yyyy-MM-dd HH:mm:ss' }}
+            {{ item.w_Time | date: 'yyyy-MM-dd HH:mm' }}
           </span>
         </td>
       </tr>
@@ -101,22 +101,20 @@
 
         <i class="bi bi-clock ml-2 mr-2"></i>
         <!-- Value -->
-        <span class="font-weight-bold">
-          {{ fb_Value['w_BMinute'].value }}
-        </span>
+        <span class="font-weight-bold" [innerHtml]="minutes_Total('bMinute')"></span>
       </div>
 
       <!-- BMinute Start -->
       <div class="form-group col text-center">
         <label>開始</label>
-        <input type="datetime-local" id="SbMinute" step="3600" class="form-control form-control-sm" [value]="start_bMinute"
+        <input type="datetime-local" id="SbMinute" step="3600" class="form-control form-control-sm" [value]="onValue('SbMinute')"
           (input)="onDate($event.target)">
       </div>
 
       <!-- BMinute End -->
       <div class="form-group col text-center">
         <label>結束</label>
-        <input type="datetime-local" id="EbMinute" step="3600" class="form-control form-control-sm" [value]="end_bMinute"
+        <input type="datetime-local" id="EbMinute" step="3600" class="form-control form-control-sm" [value]="onValue('EbMinute')"
           (input)="onDate($event.target)">
       </div>
     </div>
@@ -132,22 +130,20 @@
 
         <i class="bi bi-clock ml-2 mr-2"></i>
         <!-- Value -->
-        <span class="font-weight-bold">
-          {{ fb_Value['w_OMinute'].value }}
-        </span>
+        <span class="font-weight-bold" [innerHtml]="minutes_Total('oMinute')"></span>
       </div>
 
       <!-- OMinute Start -->
       <div class="form-group col text-center">
         <label>開始</label>
-        <input type="datetime-local" id="SoMinute" step="3600" class="form-control form-control-sm" [value]="start_bMinute"
+        <input type="datetime-local" id="SoMinute" step="3600" class="form-control form-control-sm" [value]="onValue('SoMinute')"
           (input)="onDate($event.target)">
       </div>
 
       <!-- OMinute End -->
       <div class="form-group col text-center">
         <label>結束</label>
-        <input type="datetime-local" id="EoMinute" step="3600" class="form-control form-control-sm" [value]="end_bMinute"
+        <input type="datetime-local" id="EoMinute" step="3600" class="form-control form-control-sm" [value]="onValue('EoMinute')"
           (input)="onDate($event.target)">
       </div>
     </div>
