--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -52,7 +52,7 @@
   <div class="modal-footer d-flex justify-content-between">
     <button type="button" class="btn btn-outline-secondary" (click)="close()">取消</button>
     <!-- <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('Cross click')">取消</button> -->
-    <button type="submit" class="btn btn-outline-danger" (click)="delete()" [disabled]="!fb_Value_Index[0]">確定</button>
+    <button type="submit" class="btn btn-outline-danger" (click)="delete()" [disabled]="!fbGroup.valid">確定</button>
   </div>
   <!-- /Footer -->
 </ng-template>
